# simple_brainfuck

./: .gitignore  README.md  pyproject.toml
simple_brainfuck/: __init__.py  __main__.py  main.py
